[gd_scene load_steps=2 format=3 uid="uid://ft3iewvmq0gd"]

[ext_resource type="Script" path="res://water_zone.gd" id="1_7e71f"]

[node name="WaterZone" type="Area2D"]
script = ExtResource("1_7e71f")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
